2004-03-12  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/io/PrintWriter/checkError.java: New test.

2004-03-11  Mark Wielaard  <mark@klomp.org>

	* batch_run: Add jikes -bootclasspath example. Only show PASS: or
	FAIL: results (eliminate killed/terminated messages).
	* runner: Add jamvm example. Only kill when not KILLED (by timeout).
	
2004-03-11  Sascha Brawer  <brawer@dandelis.ch>

	* gnu/testlet/java/util/logging/Handler/getErrorManager.java,
	gnu/testlet/java/util/logging/Handler/isLoggable.java,
	gnu/testlet/java/util/logging/Handler/reportError.java,
	gnu/testlet/java/util/logging/Handler/setEncoding.java,
	gnu/testlet/java/util/logging/Handler/setErrorManager.java,
	gnu/testlet/java/util/logging/Handler/setFilter.java,
	gnu/testlet/java/util/logging/Handler/setLevel.java,
	gnu/testlet/java/util/logging/Handler/TestErrorManager.java,
	gnu/testlet/java/util/logging/Handler/TestHandler.java,
	gnu/testlet/java/util/logging/Handler/TestSecurityManager.java:
	New files.

2004-03-09  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/io/BufferedInputStream/BigMark.java: New test.

2004-03-08  Stephen Crawley <crawley@dstc.edu.au>
	* gnu/testlet/java/io/File/security.java : revamped testcase to
	use a test security manager to monitor the permissions checked.
	* gnu/testlet/TestSecurityManager2.java : new class
	
	* Makefile.am : Added gnu/testlet/TestSecurityManager2.java to
	the harness file list.  Added a rule to clean up /tmp/mauve-testdir
	* Makefile.in : regenerated
	* aclocal.m4 : regenerated
	* configure : regenerated

2004-02-25  Guilhem Lavaux <guilhem@kaffe.org>

	* gnu/testlet/java/text/DecimalFormat/DecimalFormat.java:
	Fixed "#.#" testcase.

	* gnu/testlet/java/text/AttributedString/Test.java:
	Fixed offsets. New subtestcase.

2004-02-27  Sascha Brawer  <brawer@dandelis.ch>

	* gnu/testlet/java/util/logging/Logger/getName.java,
	gnu/testlet/java/util/logging/Logger/hierarchyChecks.java:
	New files.
