@@ -1,5 +1,10 @@
 2004-03-12  Mark Wielaard  <mark@klomp.org>
 
+	* gnu/testlet/java/io/FilePermission/simple.java: Add test for dirs
+	without a file separator.
+
+2004-03-12  Mark Wielaard  <mark@klomp.org>
+
 	* gnu/testlet/java/io/PrintWriter/checkError.java: New test.
 
 2004-03-11  Mark Wielaard  <mark@klomp.org>
